--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "@headlessui/react": "^2.1.8",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.3.21",
