--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^2.1.8",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@vercel/analytics": "^1.3.1",
     "framer-motion": "^11.3.21",
     "html-react-parser": "^5.1.12",
     "i18next": "^23.11.5",
